[tests] an attempt to fix `VfsUtilTest#testRenameDuringFullRefresh` by disabling debug logging while it runs
GitOrigin-RevId: 3885982900af3877477ebc420493a45089f9a01d